--- a/index.html
+++ b/index.html
@@ -8,46 +8,18 @@
 
 
 <body>
-    <h1>  AP Statistics </h1>
-    <h2> Chapter 3 </h2>
-    <h3> &nbsp;&nbsp;&nbsp;&nbsp;  Vocabulary </h3>
-        <p>
-          <ol>
-            <ol>
-              <li> Correlation Coefficient (r) </li>
-                  <ul> Tells us the strength and direction of the
-                    linear relationship between the variables
-                  </ul>
-                  <ul>
-                      <ol>
-                        <li> Strong if -0.8 &le r &le -1 or 0.8 &le r &le 1 </li>
-                        <li> Moderate if -0.5 &le r &le -0.8 or 0.5 &le r &le 0.8 </li>
-                        <li> Weak if -0.5 &le r &le 0.5 </li>
-                      </ol>
-                  </ul>
-              <li> Coefficient of Determination (r<sup>2</sup>)</li>
-                  <ul> The percent of the variation in y that can be explained
-                    by the linear relationship with x
-                  </ul>
-              <li> Least Squares Regression Line (LSRL)</li>
-                  <ul> A regression line is a straight line that describes
-                    how a response variable changes as an explanatory variable
-                    changes. We use a regression line to predict the value
-                    of y for a given x
-                  </ul>
-              <li> LSRL Equation </li>
-                  <ul> &#375 = a + bx
-                    <ol>
-                      <li> Y-Intercept is a</li>
-                          <ul>
-                          </ul>
-                      <li> Slope</li>
-                    </ol>
-                  </ul>
-            </ol>
-          </ol>
-        </p>
+    <h1>AP Statistics</h1>
+    <h2>Chapter 3: Examining Relations in Bivariate Data</h2>
+    <h4><h4>
+    <h3><a href="vocabulary.html">Vocabulary</a></h3>
+
+    <h3><a href="scatterplots.html">Scatterplots</a></h3>
+
+    <h3><a href="residualPlots.html">Residual Plots</a></h3>
+
+    <h3><a href="transformationsToAchieveLinearity.html">Transformations to Achieve Linearity</a></h3>
+
 </body>
-
-
 </html>
+
+<!-- this is a comment -->
