--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>AP Statistics</h1>
     <h2>Chapter 3: Examining Relations in Bivariate Data</h2>
-    <h4><h4>
+    <p> &nbsp;&nbsp;&nbsp;&nbsp; Both variables must be quantitative to proceed.
+    </p>
+
     <h3><a href="vocabulary.html">Vocabulary</a></h3>
 
     <h3><a href="scatterplots.html">Scatterplots</a></h3>
