--- a/residualPlots.html
+++ b/residualPlots.html
@@ -8,8 +8,21 @@
 
 <h2> Residual Plots </h2>
   <p>
-      <ol>
-          information
+      <ol> The difference between the actual and predicted y value </ol>
+      <ol> How to Assess if a Linear Relation Exists
+          <ol>
+              <li> Make a scatterplot: Does it look linear? </li>
+              <li> Make a residual plot </li>
+                  
+          </ol>
+      </ol>
+      <ol> Patterns in a residual point
+          <ol>
+              <li> if it's curved, then the relationship is not linear </li>
+              <li> if there is an increasing/decreasing spread, then the predicted y will be less accurate </li>
+              <li> inviduals with large residuals are outliers </li>
+              <li> individual points that are extreme in the x direction are potentially influential points </li>
+          </ol>
       </ol>
   </p>
 
