--- a/vocabulary.html
+++ b/vocabulary.html
@@ -17,6 +17,8 @@
             <ul> Tells us the strength and direction of the
               linear relationship between the variables
             </ul>
+            <ul> r has no units
+            </ul>
             <ul>
                 <ol>
                   <li> Strong if -0.8 &le r &le -1 or 0.8 &le r &le 1 </li>
@@ -43,6 +45,13 @@
                 <li> b represents the Slope</li>
               </ol>
             </ul>
+        <li> Residual </li>
+            <ul> How far away the actual y data us away from the predicted y data </ul>
+            <ul> residual = y - &#375 </ul>
+        <li> Correlation </li>
+            <ul> Focuses on the strength and direction of the LSRL </ul>
+        <li> Association </li>
+            <ul> Focuses on the form and direction of the LSRL </ul>
       </ol>
   </p>
 
