--- a/scatterplots.html
+++ b/scatterplots.html
@@ -10,16 +10,27 @@
   <p>
       <ol>
           The most effective way to display the relationship between two
-          quantitative variables is a scatterplot.
-          A scatterplot plots the data in coordinates without connecting the
-          points.
-          To interpret a scatterplot
-            <ol>
-              <li>  </li>
-              <li>  </li>
-              <li>  </li>
-            <ol>
-      </ol>
+          quantitative variables is a scatterplot.  </ol>
+      <ol> A scatterplot plots the data in coordinates without connecting the
+      points. </ol>
+      <ol>
+          To interpret a scatterplot look at:
+              <ul>
+                  Overall Pattern
+                  <ul>
+                      <li> Form: is it linear? </li>
+                      <li> Direction: is the slope positive or negative? </li>
+                      <li> Strength: how strong is the linear relationship? </li>
+                  </ul>
+              </ul>
+              <ul>
+                  Deviations in the Pattern
+                  <ul>
+                      <li> Outliers: points in the direction of the y axis </li>
+                      <li> Influential Points: points in the direction of the x axis </li>
+                  </ul>
+              </ul>
+       </ol>
   </p>
 
 </body>
