Finished plots & transformations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h2>Chapter 3: Examining Relations in Bivariate Data</h2>
     <p> &nbsp;&nbsp;&nbsp;&nbsp; Both variables must be quantitative to proceed.
     </p>
+    <p> &nbsp;&nbsp;&nbsp;&nbsp; Just because a relationship may exist does not mean it is cause and effect.
+    </p>
 
     <h3><a href="vocabulary.html">Vocabulary</a></h3>
 
