--- a/residualPlots.html
+++ b/residualPlots.html
@@ -13,7 +13,11 @@
           <ol>
               <li> Make a scatterplot: Does it look linear? </li>
               <li> Make a residual plot </li>
-                  
+                  <ol> The relationship is linear IFF
+                      <li> points are evenly scattered around zero </li>
+                      <li> points are random (no curve or pattern) </li>
+                      <li> no pattern in the variation </li>
+                  </ol>
           </ol>
       </ol>
       <ol> Patterns in a residual point
@@ -24,6 +28,7 @@
               <li> individual points that are extreme in the x direction are potentially influential points </li>
           </ol>
       </ol>
+      <ol> The residual either confirms or contradicts the linear relationship between x and y </ol>
   </p>
 
 </body>
