--- a/index.html
+++ b/index.html
@@ -5,26 +5,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-
-
 <body>
     <h1>AP Statistics</h1>
-    <h2> Chapter 1 </h2>
-    
-    <h2> Chapter 2 </h2>
-
-    <h2>Chapter 3: Examining Relations in Bivariate Data</h2>
-        <p> &nbsp;&nbsp;&nbsp;&nbsp; Both variables must be quantitative to proceed. </p>
-        <p> &nbsp;&nbsp;&nbsp;&nbsp; Just because a relationship may exist does not mean it is cause and effect. </p>
-        <h3><a href="vocabulary.html">Vocabulary</a></h3>
-        <h3><a href="scatterplots.html">Scatterplots</a></h3>
-        <h3><a href="residualPlots.html">Residual Plots</a></h3>
-        <h3><a href="transformationsToAchieveLinearity.html">Transformations to Achieve Linearity</a></h3>
-
-
-
-
+    <h2><a href="chapter1.html">Chapter 1</a></h2>
+    <h2><a href="chapter2.html">Chapter 2</a></h2>
+    <h2><a href="chapter3.html">Chapter 3: Examining Relations in Bivariate Data</a></h2>
 </body>
+
 </html>
 
 <!-- this is a comment -->
