--- a/ch3.transformationsToAchieveLinearity.html
+++ b/ch3.transformationsToAchieveLinearity.html
@@ -21,16 +21,19 @@
           <ol>
               <li> Plot (x,y), make a scatterplot AND a residual plot to determine if the graph is linear.
                   <ol> LSRL is &#375 = a + bx </ol>
+                  <ol> <a href="ch3.TAL.Example1.html">Example</a> </ol>
                   <ol> IF NOT </ol>
               </li>
 
               <li> Plot (x, lny), make a scatterplot AND a residual plot to determine if the graph is linear.
                   <ol> LSRL is ln&#375 = a + bx </ol>
+                  <ol> <a href="ch3.TAL.Example2.html">Example</a> </ol>
                   <ol> IF NOT </ol>
               </li>
 
               <li> Plot (lnx, lny), make a scatterplot AND a residual plot to determine if the graph is linear.
                   <ol> LSRL is ln&#375 = a + blnx </ol>
+                  <ol> <a href="ch3.TAL.Example3.html">Example</a> </ol>
               </li>
 
           </ol>
