--- a/ch3.TAL.Example3.html
+++ b/ch3.TAL.Example3.html
@@ -2,10 +2,21 @@
 
 <header>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </header>
 
 <body>
+  <h2> Evaluating Linear Data Between lnx and lny </h2>
+      <h4> Scatterplot Between lnx and lny </h4>
+      <img src="xyScatterplot.png" alt="xyScatterplot" style="width: 304px;height:228px;">
 
+          <p> Although the scatterplot between lnx and lny may look linear, one cannot confirm a linear relationship between lnx and lny without looking at the residual plot. </p>
+
+      <h4> Residual Between lnx and residual of lny</h4>
+      <img src="xResid.png" alt="xResidualPlot" style="width: 304px;height:228px;">
+
+      <p> Since the residual plot does not follow a pattern and the points are evenly scattered around zero, the residual plot confirms a linear relationship between lnx and lny. </p>
+      <p> However, if the residual plot follows a pattern and/or the points are not evenly scattered around zero, the residual plot contradicts a linear relationship between lnx and lny. </p>
 </body>
 
 </html>
