--- a/ch3.transformationsToAchieveLinearity.html
+++ b/ch3.transformationsToAchieveLinearity.html
@@ -2,6 +2,7 @@
 
 <header>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </header>
 
 <body>
@@ -38,8 +39,8 @@
 
           </ol>
       </ol>
-      <ol> To achieve linearity from a power model y = ax<sup>p</sup>, take the logarithm of both variables
-      </ol>
+      <ol> To achieve linearity from a power model y = ax<sup>p</sup>, take the logarithm of both variables </ol>
+      <ol> To achieve linearity from an exponential model y = a<sup>x</sup>, take the logarithm of y </ol>
   </p>
 
 </body>
