--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title> AP Statistics </title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
