--- a/ch3.vocabulary.html
+++ b/ch3.vocabulary.html
@@ -1,8 +1,10 @@
 <html>
 
-<header>
+<head>
     <link rel="stylesheet" href="main.css">
-</header>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
 
@@ -21,9 +23,9 @@
             </ul>
             <ul>
                 <ol>
-                  <li> Strong if -0.8 &le r &le -1 or 0.8 &le r &le 1 </li>
-                  <li> Moderate if -0.5 &le r &le -0.8 or 0.5 &le r &le 0.8 </li>
-                  <li> Weak if -0.5 &le r &le 0.5 </li>
+                  <li> Strong if -0.8 &le; r &le; -1 or 0.8 &le; r &le; 1 </li>
+                  <li> Moderate if -0.5 &le; r &le; -0.8 or 0.5 &le; r &le; 0.8 </li>
+                  <li> Weak if -0.5 &le; r &le; 0.5 </li>
                 </ol>
             </ul>
         <li> Coefficient of Determination (r<sup>2</sup>)</li>
@@ -37,7 +39,7 @@
               of y for a given x
             </ul>
         <li> LSRL Equation </li>
-            <ul> &#375 = a + bx
+            <ul> &#375; = a + bx
               <ol>
                 <li> a represents the Y-Intercept</li>
                     <ul>
@@ -47,7 +49,7 @@
             </ul>
         <li> Residual </li>
             <ul> How far away the actual y data us away from the predicted y data </ul>
-            <ul> residual = y - &#375 </ul>
+            <ul> residual = y - &#375; </ul>
         <li> Correlation </li>
             <ul> Focuses on the strength and direction of the LSRL </ul>
         <li> Association </li>
