--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>AP Statistics</h1>
-    <h2><a href="chapter1.html">Chapter 1</a></h2>
-    <h2><a href="chapter2.html">Chapter 2</a></h2>
+    <h2><a href="chapter1.html">Chapter 1 (Placeholder)</a></h2>
+    <h2><a href="chapter2.html">Chapter 2 (Placeholder)</a></h2>
     <h2><a href="chapter3.html">Chapter 3: Examining Relations in Bivariate Data</a></h2>
 </body>
 
